--- a/src/html/index.css
+++ b/src/html/index.css
@@ -1,4 +1,33 @@
-html, body {
+
+html, body, h1, h2, h3, h4, h5, h6, p {
     margin:0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+header {
+    background-color: #8ffff2;
+}
+
+main {
+    width: 320px;
+    margin: auto;
+}
+
+
+@media (min-width:576px) {
+    main {
+        display:flex;
+    }
+}
+
+@media (min-width: 768px) {
+    .post {
+        width: 576px;
+    }
 }
