--- a/src/html/index.css
+++ b/src/html/index.css
@@ -9,36 +9,68 @@ html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
 header {
     background-color: #8ffff2;
+    padding: 4px;
+}
+
+footer {
+    background-color: #8ffff2;
+    padding: 4px;
+}
+
+
+h1 {
+    font-size: 1.5rem;
 }
 
 .container {
     max-width: 500px;
-    
-    margin:auto;
-}
-
-.user-subpost textarea {
-    display: block;
-}
-
-.user-subpost button {
-    display: block;
+    margin: 4px auto 4px;
+    padding: 4px;
 }
 
 .user-subpost-title {
     display: inline-block;
     border: 1px solid grey;
     padding: 5px;
+    font-size: 1rem;
 }
 
 .user-subpost-title input {
     outline: none;
     border: none;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+}
 
+.user-subpost textarea {
+    display: block;
+    width: 320px;
+
+}
+
+.user-subpost button {
+    display: block;
+}
+
+.subpost {
+    display: block;
+    user-select: none;
+    text-decoration: none;
+    color: inherit;
+    margin: 4px 0;
+    padding: 4px;
+}
+
+.subpost:hover {
+    outline: 1px solid grey;
+}
+
+
+.subpost .user {
+    font-size: 1rem;
 }
 
 @media (min-width:768px) {
