--- a/src/html/index.css
+++ b/src/html/index.css
@@ -5,6 +5,10 @@ html, body, h1, h2, h3, h4, h5, h6, p {
     box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    display: inline-block;
+}
+
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
