--- a/src/html/templates/post.html
+++ b/src/html/templates/post.html
@@ -1,4 +1,4 @@
 <a class="subpost" href="/<!--title-->">
-    <h3><!--title--> <span class="user">@<!--user--></span></h3>
+    <h3><!--title--></h3> <span class="user">@<!--user--></span>
     <p><!--content--></p>
 </a>
