--- a/src/html/index.css
+++ b/src/html/index.css
@@ -34,6 +34,38 @@ h1 {
     padding: 4px;
 }
 
+.login-container input[type=checkbox] {
+    display: block;
+}
+
+.login-container input[type=checkbox]::before{
+    content:"Login";
+    display: block;
+}
+
+.login-container input[type=checkbox]::after{
+    content:"Register";
+    
+    display: block;
+}
+
+
+.login-container .login {
+
+}
+
+.login-container .register {
+    display: none;
+}
+
+.login-container input[type=checkbox]:checked~.login {
+    display: none;
+}
+
+.login-container input[type=checkbox]:checked~.register {
+    display: block;
+}
+
 .user-subpost-title {
     display: inline-block;
     border: 1px solid grey;
