--- a/src/html/templates/post.html
+++ b/src/html/templates/post.html
@@ -1,4 +1,9 @@
 <a class="subpost" href="/<!--title-->">
-    <h3><!--title--></h3> <span class="user">@<!--user--></span>
-    <p><!--content--></p>
+    <h3>
+        <!--title-->
+    </h3> by <span class="user">
+        <!--user--></span>
+    <p>
+        <!--content-->
+    </p>
 </a>
