--- a/src/html/index.css
+++ b/src/html/index.css
@@ -5,7 +5,9 @@ html, body, h1, h2, h3, h4, h5, h6, p {
     box-sizing: border-box;
 }
 
-
+aside {
+    background-color: #ddd;
+}
 
 
 h1, h2, h3, h4, h5, h6 {
