added homepage link to title.

--- a/src/html/index.css
+++ b/src/html/index.css
@@ -5,7 +5,12 @@ html, body, h1, h2, h3, h4, h5, h6, p {
     box-sizing: border-box;
 }
 
-
+.page-title{
+    font-size: 2em;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+}
 
 
 h1, h2, h3, h4, h5, h6 {
